feat: udistrital/sga_documentacion#427
